Make input section more readable and fix spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -191,6 +191,9 @@ form label {
     border: 1px solid black;
     border-radius: 20px;
     width: 100%;
+    font-size: x-large;
+    font-weight: bold;
+    text-align: center;
 }
 
 .signtext:hover {
@@ -234,7 +237,7 @@ footer {
 
 iframe {
     height: 500px;
-    margin: 0 auto;
+    margin: 40px auto;
     width: 50%;
 }
 
